--- a/views/students.ejs
+++ b/views/students.ejs
@@ -16,6 +16,7 @@
           <th> First Name</th>
           <th> Last Name</th>
           <th> Email</th>
+          <th> Actions</th>
           <th> Options</th>
         </tr>
         <%students_data.forEach(s => { %>
@@ -24,13 +25,14 @@
             <td><%= s.first_name %></td>
             <td><%= s.last_name %></td>
             <td><%= s.email %></td>
+            <td><a href="students/<%= s.id %>/addsubject">Add Subject</a></td>
             <td><a href="students/edit/<%= s.id %>">edit</a> | <a href="students/delete/<%= s.id %>">delete</a> </td>
           </tr>
         <% }) %>
       </table>
       <br>
       <br>
-    
+
       <a href="/">home</a>
     </div>
   </body>
