--- a/views/givescore.ejs
+++ b/views/givescore.ejs
@@ -8,12 +8,16 @@
 
   <body>
     <h1>Input Score</h1>
+    <form action="/subjects/<%=ss_data[0].id%>/givescore" method="post">
+      Student Name: <%=ss_data[0].Student.first_name%> <%=ss_data[0].Student.last_name%> <br>
+      Subject Name: <%=ss_data[0].Subject.subject_name %> <br>
 
-    Student Name: <%=students_data.first_name%> <%=students_data.last_name%> <br>
-    Subject Name: <%=subjects_data.subject_name %> <br>
+      Score : <input type="text" name="score"><br>
 
-
-      <a href="/">home</a>
+      <button type="submit" name="">Add score</button>
+      <br><br>
+    </form>
+    <a href="/">home</a>
 
   </body>
 </html>
