--- a/views/students.ejs
+++ b/views/students.ejs
@@ -12,16 +12,16 @@
     <div class="title">
       <table border="1">
         <tr>
-          <th> ID </th>
+          <th> No </th>
           <th> First Name</th>
           <th> Last Name</th>
           <th> Email</th>
           <th> Actions</th>
           <th> Options</th>
         </tr>
-        <%students_data.forEach(s => { %>
+        <% var i=1; students_data.forEach(s => { %>
           <tr>
-            <td><%= s.id %> </td>
+            <td><%= i++ %> </td>
             <td><%= s.first_name %></td>
             <td><%= s.last_name %></td>
             <td><%= s.email %></td>
