--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -12,16 +12,16 @@
     <div class="title">
       <table border="1">
         <tr>
-          <th> ID </th>
+          <th> No </th>
           <th> First Name</th>
           <th> Last Name</th>
           <th> Email</th>
           <th> Subject</th>
           <th> Options</th>
         </tr>
-        <%teacher_data.forEach(t => { %>
+        <% var i=1;teacher_data.forEach(t => { %>
           <tr>
-            <td><%= t.id %> </td>
+            <td><%= i++ %> </td>
             <td><%= t.first_name %></td>
             <td><%= t.last_name %></td>
             <td><%= t.email %></td>
