partial dan helpers

--- a/views/edit-teachers.ejs
+++ b/views/edit-teachers.ejs
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <%- include layout/menu-bar %>
     <h1>Edit Teachers Data</h1>
     <h3><a href="/teachers">show all data</a></h3>
 
