--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Subject</title>
+    <%- include layout/page-title %>
     <link type="text/css" rel="stylesheet" href="/style.css">
   </head>
 
   <body>
+    <%- include layout/menu-bar %>
     <h1>All Subjects Data</h1>
 
     <div class="title">
