--- a/views/add-students.ejs
+++ b/views/add-students.ejs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Add Students</title>
+    <%- include layout/page-title %>
     <link type="text/css" rel="stylesheet" href="/style.css">
   </head>
 
   <body>
+    <%- include layout/menu-bar %>
     <h1>Add Students Data</h1>
     <h3><a href="/students">show all data</a></h3>
 
