--- a/views/edit-students.ejs
+++ b/views/edit-students.ejs
@@ -7,6 +7,7 @@
   </head>
 
   <body>
+    <%- include layout/menu-bar %>
     <h1>Edit Student Data</h1>
     <h3><a href="/students">show all data</a></h3>
 
