--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Welcome</title>
+    <%- include layout/page-title %>
     <link type="text/css" rel="stylesheet" href="/style.css">
   </head>
 
   <body>
     <div class="title">
-
+      <%- include layout/menu-bar %>
       <h1> Welcome, please choose the menu </h1>
-      <a href="/teachers">Teacher</a>
-      <a href="/subjects">Subject</a>
-      <a href="/students">Students</a>
+
 
     </div>
   </body>
