--- a/views/students.ejs
+++ b/views/students.ejs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Students</title>
+    <%- include layout/page-title %>
     <link type="text/css" rel="stylesheet" href="/style.css">
   </head>
 
   <body>
+    <%- include layout/menu-bar %>
     <h1>Students Data</h1>
     <h4><a href="/students/add">add student</a></h4>
     <div class="title">
