--- a/views/teachers.ejs
+++ b/views/teachers.ejs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Teacher</title>
+    <%- include layout/page-title %>
     <link type="text/css" rel="stylesheet" href="/style.css">
   </head>
 
   <body>
+    <%- include layout/menu-bar %>
     <h1>All Teachers Data</h1>
     <h4><a href="/teachers/add">Add Teachers Data</a></h4>
     <div class="title">
