sampai install express-session

--- a/views/layout/menu-bar.ejs
+++ b/views/layout/menu-bar.ejs
@@ -1,6 +1,7 @@
 
 <nav>
   <li><a href="/">Home</a></li>
+  <li><a href="/login">Log in</a></li>
   <li class="dropdown">
     <a href="/teachers" class="dropbtn">Teachers</a>
     <div class="dropdown-content">
