add hooks di User untuk secret key dan password, session masih belum

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
       <%- include layout/menu-bar %>
       <h1> Welcome, please choose the menu </h1>
 
-
+      <a href="/login">Log in</a> <a href="/signup">Sign Up</a>
     </div>
   </body>
 </html>
